[package]
name = "f1_game_telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
env_logger = "0.9.0"
error-stack = "0.1.1"
futures-util = "0.3.21"
log = "0.4.17"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = {version = "0.17.1", features = ["native-tls"]}
tungstenite = "0.17.2"
url = "2.2.2"
